[package]
name = "pckp-server"
version = "0.1.0"
authors = ["krista-chan <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
serde_json = "1.0"
tar = "0.4.35"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["postgres_pool"]

# [dependencies.rocket_contrib]
# version = "0.4.10"
# features = ["postgres_pool"]

[dependencies.serde]
version = "1"
features = ["derive"]
